--- a/index.html
+++ b/index.html
@@ -17,40 +17,44 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 
-<body>
+<div id="page">
 
-  <header>
-    <nav>
+  <body>
 
-      <img src="src/img/logo.svg" alt="Logotipo da marca rocket.sect">
+    <header>
+      <nav>
 
-      <ul>
-        <li><a href="#">Início</a></li>
-        <li><a href="#">Serviços</a></li>
-        <li><a href="#">Contato</a></li>
-      </ul>
-    </nav>
-  </header>
+        <img src="src/img/logo.svg" alt="Logotipo da marca rocket.sect">
 
-  <main>
-    <img src="src/img/img1.png" alt="ilustração de uma pessoa ao lado de um laptop com cadeado">
-    <section>
-      <h1>Seus dados estão protegidos?</h1>
+        <ul>
+          <li><a href="#">Início</a></li>
+          <li><a href="#">Serviços</a></li>
+          <li><a href="#">Contato</a></li>
+        </ul>
+      </nav>
+    </header>
 
-      <p>A informação é fundamental e de extrema importância para qualquer empresa.</p>
+    <main>
+      <img src="src/img/img1.png" alt="ilustração de uma pessoa ao lado de um laptop com cadeado">
+      <section>
+        <h1>Seus dados estão protegidos?</h1>
 
-      <p>
-        Aqui vai um texto como se fosse uma empresa de segurança da informação apresentando o seu produto e com o texto todo estilizado.
-      </p>
-    </section>
-  </main>
+        <p>A informação é fundamental e de extrema importância para qualquer empresa.</p>
 
-  <footer>
-    para mais informações nos siga no instagram @rocketsect
-  </footer>
+        <p>
+          Aqui vai um texto como se fosse uma empresa de segurança da informação apresentando o seu produto e com o texto todo estilizado.
+        </p>
+      </section>
+    </main>
 
-  <img src="src/img/padlock.svg" alt="ilustração de cadeado no canto inferior esquerdo da página">
+    <footer>
+      para mais informações nos siga no instagram @rocketsect
+    </footer>
 
-</body>
+    <img src="src/img/padlock.svg" alt="ilustração de cadeado no canto inferior esquerdo da página">
+
+  </body>
+</div>
+
 
 </html>
