--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
     <main>
       <img src="src/img/img1.png" alt="ilustração de uma pessoa ao lado de um laptop com cadeado">
       <section>
-        <h1>Seus dados estão protegidos?</h1>
+        <h1>Seus dados estão <span>protegidos</span>?</h1>
 
-        <p>A informação é fundamental e de extrema importância para qualquer empresa.</p>
+        <p>A informação é fundamental e de <strong>extrema importância</strong> para qualquer empresa.</p>
 
         <p>
-          Aqui vai um texto como se fosse uma empresa de segurança da informação apresentando o seu produto e com o texto todo estilizado.
+          Aqui vai um texto como se fosse uma empresa de <span>segurança da informação</span> apresentando o seu produto e com o texto todo estilizado.
         </p>
       </section>
     </main>
