Finalization of the project

--- a/index.html
+++ b/index.html
@@ -47,13 +47,19 @@
       </section>
     </main>
 
+
     <footer>
+      <div id="line"></div>
+
+      <img id="padlock" src="src/img/padlock.svg" alt="ilustração de cadeado no canto inferior esquerdo da página">
+
       para mais informações nos siga no instagram @rocketsect
-    </footer>
+</div>
 
-    <img src="src/img/padlock.svg" alt="ilustração de cadeado no canto inferior esquerdo da página">
+</footer>
 
-  </body>
+
+</body>
 </div>
 
 
